--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -5,11 +5,19 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+  
+  <ion-item>
+    <ion-label position="floating">Nama Lengkap</ion-label>
+    <ion-input type="text" [(ngModel)]="namaLengkap"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Asal Sekolah</ion-label>
+    <ion-input type="text" [(ngModel)]="sekolah"></ion-input>
+  </ion-item>
   <ion-item>
     <ion-label position="floating">Email</ion-label>
     <ion-input type="email" [(ngModel)]="email"></ion-input>
   </ion-item>
-
   <ion-item>
     <ion-label position="floating">Password</ion-label>
     <ion-input type="password" [(ngModel)]="password"></ion-input>
@@ -18,7 +26,7 @@
   <ion-button expand="block" (click)="register()" class="ion-margin-top">
     Daftar
   </ion-button>
-
+  
   <ion-button expand="block" fill="clear" routerLink="/login">
     Sudah punya akun? Login
   </ion-button>
